# cgride

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
cmake/: cgride-config.cmake.in
include/cgride/: cgride.hpp  version.hpp
tests/: CMakeLists.txt  cli_noop_integration_test.py  umbrella_header_test.cpp
tools/: benchmark-hello.py
